[package]
name = "mpu9250-async"
version = "0.0.1"
authors = ["Mirko Genovesi <mirkogenovesi24@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
description = "Platform-independent I2C driver for MPU9250. Fork of mpu6050-dmp-rs which allows usage mpu6050 async and dmp operations"
keywords = ["driver", "i2c", "motion", "dmp", "no_std"]
categories = ["no-std", "embedded"]
repository = "https://github.com/mirko-geno/mpu9250-async-rs"
readme = "README.md"

[features]
default = []
defmt-03 = ["dep:defmt"]
serde = ["dep:serde"]
async = ["dep:embedded-hal-async"]
postcard = ["dep:postcard"]
postcard-experimental = ["postcard", "postcard/experimental-derive"]

[dependencies]
embedded-hal = { version = "1" }
embedded-hal-async = { version = "1", optional = true }
libm = "0.2"

serde = { version = "1", features = ["derive"], default-features = false, optional = true }
defmt = { version = "0.3", optional = true }
postcard = { version = "1", optional = true }
